--- a/templates/tag-roles.html
+++ b/templates/tag-roles.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="Bill Dry">
+        <meta name="author" content="Bill Dry - bdry@amazon.com">
         <meta name="description" content="Tag your Roles">
         <meta name="keywords" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,8 @@
                         </tbody>
                     </table>
 
-        <form method="post" action="{{ url_for('set_roles_tags') }}">            
+        <form method="post" action="{{ url_for('set_roles_tags') }}">  
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>          
                     <div class="form-group">
                         <select class="custom-select" id="FormControlSelect1" name="roles_to_tag" size="10">
                         {% for role_id in roles_inventory %}
@@ -60,6 +61,7 @@
         <br>
         <span style="text-align:center;">
             <form method="get" action="{{ url_for('actions') }}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <button type="submit" class="btn btn-primary btn-lg">Home</button>
                 <button type="submit" class="btn btn-outline-primary btn-lg">Cancel</button>
             </form>
