--- a/templates/display-tag-groups.html
+++ b/templates/display-tag-groups.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="author" content="Bill Dry">
+        <meta name="author" content="Bill Dry - bdry@amazon.com">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Choose Your Tag Groups</title>
         <meta name="description" content="Pick a Tag Group or create a new one">
@@ -13,6 +13,7 @@
         <h4>Please select a Tag Group to edit</h4>
         <br>
         <form method="post" action="{{ url_for('edit_tag_group') }}">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div class="form-group">
             <label for="FormControlSelect1">Select an existing Tag Group</label>
             <select class="form-control" id="FormControlSelect1" name="tag_group_name">
@@ -36,6 +37,7 @@
         <br>
         <div class="container">
             <form method="get" action="{{ url_for('actions') }}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <button type="submit" class="btn btn-primary btn-lg">Home</button>
                 <button type="submit" class="btn btn-outline-primary btn-lg">Cancel</button>
             </form>
