--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="Bill Dry">
+    <meta name="author" content="Bill Dry - bdry@amazon.com">
     <meta name="description" content="Tag Tamer Home Page">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,6 +18,7 @@
   <div class="row">
     <div class="col-2">
       <form method="get" action="{{ url_for('actions') }}" target="home_iframe">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <button type="submit" class="btn btn-primary btn-lg">Home</button>
       </form>
     </div>
