--- a/templates/select-resource-type.html
+++ b/templates/select-resource-type.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Select an AWS Resource Type</title>
-        <meta name="author" content="Bill Dry">
+        <meta name="author" content="Bill Dry - bdry@amazon.com">
         <meta name="description" content="Select an AWS resource type">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -15,6 +15,7 @@
     <br>
         <div class="container">
         <form method="post" action="{{ url_for('tag_resources') }}">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div class="form-check">
                 <input class="form-check-input" type="radio" id="ebsRadio" value="ebs" name="resource_type" checked>
                     <label class="form-check-label" for="ebsRadio">EBS Volumes</label>
@@ -35,6 +36,7 @@
         <br>
         <div class="container">
             <form method="get" action="{{ url_for('actions') }}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <button type="submit" class="btn btn-primary btn-lg">Home</button>
                 <button type="submit" class="btn btn-outline-primary btn-lg">Cancel</button>
             </form>
