Updated CSRF check syntax & code formatting

--- a/templates/find-tags.html
+++ b/templates/find-tags.html
@@ -23,7 +23,7 @@
     <br />
     <div class="container">
       <form method="post" action="{{ url_for('found_tags') }}">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+        <input type="hidden" name="" value="" />
         <div class="form-check">
           <input
             class="form-check-input"
