--- a/templates/update-service-catalog.html
+++ b/templates/update-service-catalog.html
@@ -27,7 +27,7 @@
                     </table>
 
         <form method="post" action="{{ url_for('set_service_catalog') }}">  
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>          
+            <input type="hidden" name="" value=""/>          
                     <div class="form-group">
                         <select multiple class="custom-select" id="FormControlSelect1" name="tag_groups_to_assign" size="10">
                         {% for tag_group_name, tag_group_key in tag_group_inventory.items() %}
@@ -38,6 +38,7 @@
                     <p>Once you select your Tag Groups & AWS Service Catalog products, click the "Apply Tag Groups" button, below.</p>
                     <br>
                     <br>
+                </div>
                 <div class="col-6">
                     <table class="table table-borderless"> 
                         <thead>
@@ -59,12 +60,13 @@
                         </select>
                     </div>
                 </div>
+                </div>
                 <button type="submit" class="btn btn-primary btn-lg">Apply Tag Groups</button>
+            </div>
         </form>
         <br>
         <span style="text-align:center;">
             <form method="get" action="{{ url_for('actions') }}">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <button type="submit" class="btn btn-primary btn-lg">Home</button>
                 <button type="submit" class="btn btn-outline-primary btn-lg">Cancel</button>
             </form>
