--- a/templates/display-tag-groups.html
+++ b/templates/display-tag-groups.html
@@ -21,7 +21,7 @@
     <h4>Please select a Tag Group to edit</h4>
     <br />
     <form method="post" action="{{ url_for('edit_tag_group') }}">
-      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+      <input type="hidden" name="" value="" />
       <div class="form-group">
         <label for="FormControlSelect1">Select an existing Tag Group</label>
         <select
