--- a/templates/tag-resources.html
+++ b/templates/tag-resources.html
@@ -26,7 +26,7 @@
                         </table>
 
                         <form method="post" action="{{ url_for('apply_tags_to_resources') }}">  
-                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>          
+                            <input type="hidden" name="" value=""/>          
                                     <div class="form-group">
                                         <select multiple class="custom-select" id="FormControlSelect1" name="resources_to_tag" size="10">
                                         {% for id_name in resource_inventory %}
@@ -66,7 +66,6 @@
         <br>
         <span style="text-align:center;">
             <form method="get" action="{{ url_for('actions') }}">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <button type="submit" class="btn btn-primary btn-lg">Home</button>
                 <button type="submit" class="btn btn-outline-primary btn-lg">Cancel</button>
             </form>
